# Data-analysis-using-Self-Organizing-Maps-CUDA

./: .gitignore  8x8.sh  CMakeLists.txt  Makefile  README.md  SOM  cppToCUDA.sh  cudaToCpp.sh  digits.cpp  digits.cu  doxygen.config  format.sh  generateDocumentationPdf.sh  make.sh  ocr.cpp  ocr.cu  ocr.h  ocrcpp.cu  octave-workspace  som.txt  test_anim.sh  test_classify_28x28.sh  visualization.m
configfiles/: classify_8x8.conf
experiments/: .1.csv.swp  .3.csv.swp  .4.csv.swp  .5.csv.swp  .6.csv.swp  .7.csv.swp  .results.swp  .~lock.sampled_init_summary.ods#  1.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  results  sampled_init_summary.ods
src/: CMakeLists.txt  Makefile  SOM  SOM.cpp  SOM.cu  confusion_matrix.cpp  confusion_matrix.cu  constants.cuh  crossvalidation.cu  cuda.cu  digit.cpp  digit.cu  digitSet.cu  digits.cpp  digits.cu  io.cpp  io.cu  main.cu  training_metrics.cu
